<resources>
    <string name="app_name">Auth</string>
    <string name="button">GET STARTED</string>
    <string name="Enter_phone"> Enter your phone number to get started.</string>
    <string name="you_will">You will receive a verification code. Carrier rates may apply.</string>
    <string name="mobile_num">Phone number</string>
    <string name="next_button">Next</string>
    <string name="verification">Enter the code we have sent to your number.</string>
    <string name="verify">Verify</string>
    <string name="otp">enter otp</string>
    <string name="dashboard">Home page</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="contact_number">number</string>
    <string name="register">register</string>
    <string name="username">username</string>
    <string name="login">login</string>
    <string name="not_a_user">not a user?REGISTER HERE</string>
    <string name="login_otp">or login with otp?CLICK HERE</string>
    <string name="company_name">PharamaC</string>
    <string name="categories">Categories</string>
    <string name="see_more">see more</string>
    <string name="search">Search</string>
    <string name="description">Order what you want and
                               find them at your doorstep.</string>
    <string name="consultation">Looking For Consultation?</string>
    <string name="consultation_des">You can order via phone or you can consult our doctor"s online.</string>
    <string name="consult_button">CALL US</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="quantity_string_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5(Max)</item>
    </string-array>
    <string name="title_activity_nav_bar">NavBar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>